kube_service/ingress/example/ldap-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: master.cloud.com
    http:
      paths:
      - backend:
          serviceName: ldap
          servicePort: 8181
        path: /ldap
  tls:
  - hosts:
    - master.cloud.com
    secretName: ingress-certificate
